# coffee-cup-orange-juice-glass

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.cfg
app/: api.py  config.py  db.py  dependency.py  enums.py  main.py  models.py  services.py
app/infrastraction/: base.py  connection.py
app/schema/: request.py
docker/: Dockerfile  Dockerfile.test  docker-compose.yml
migrations/: env.py
migrations/versions/: 2021-10-24-22-59_46b91ba463a9_first_migration.py  2021-10-29-01- 4_014d60fdf395_change_telegram.py
src/coffee_juice/: __init__.py  config.py  const.py  enums.py  main.py
src/coffee_juice/_base/: aiohttp_client.py  custom_serializers.py  datetime_work.py
src/coffee_juice/adapters/: orm.py  repository.py
src/coffee_juice/adapters/example_http/: inner_http.py  schemas.py
src/coffee_juice/entrypoints/: fastapi_app.py
src/coffee_juice/entrypoints/api_v1/: api.py
src/coffee_juice/entrypoints/api_v1/endpoints/: health_check.py  users.py
src/coffee_juice/entrypoints/api_v1/schema/: request.py  response.py
src/coffee_juice/service_layer/: consumers.py  health_check.py
tests/: conftest.py  fixtures_generate_data.py  test_db.py  test_migrations.py
