[tool.poetry]
name = "coffee-cup-orange-juice-glass"
version = "0.1.0"
description = ""
authors = ["djapy <djapy@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
pydantic = "^1.8.2"
gino = "^1.0.1"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
isort = "^5.9.3"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
