[tool.poetry]
name = "coffee-cup-orange-juice-glass"
version = "0.1.0"
description = ""
authors = ["djapy <djapy@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
pydantic = "^1.8.2"
gino = "^1.0.1"
alembic = "^1.7.4"
uvicorn = "^0.15.0"
aiohttp = "^3.7.4"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
isort = "^5.9.3"
flake8 = "^4.0.1"
mixer = "^7.1.2"
Faker = "^9.3.1"
pytest-cov = "^3.0.0"
aiohttp = "^3.7.4"
SQLAlchemy-Utils = "^0.37.8"
pytest-asyncio = "^0.15.1"
pytest-aiohttp = "^0.3.0"
psycopg2 = "^2.9.1"
pytest-dotenv = "^0.5.2"
rstr = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
